@@ -11,6 +11,7 @@ Since the page is mainly for display and does not require user interactions, the
 <com:TDataList
      ID="DataList"
      EnableViewState="false"
+     RepeatLayout="Raw"
      RepeatColumns="3"
      RepeatDirection="Horizontal"
      ItemStyle.Font.Italic="true"
