@@ -6,6 +6,7 @@ CHG: List controls now use array keys as list item values even if
      the array is integer-indexed (Qiang)
 CHG: THttpUtility::htmlEncode and htmlDecode now do not deal with & (Qiang)
 ENH: Optimized the representation and evaluation of template expressions (Qiang)
+ENH: Added Raw layout to TDataList (Qiang)
 
 Version 3.0RC1 April 5, 2006
 ============================
